--- a/simple-chat/src/index.html
+++ b/simple-chat/src/index.html
@@ -1,38 +1,16 @@
 <!DOCTYPE html>
-<html>
-    <head lang="en">
+<html lang="en">
+    <head>
         <meta charset="UTF-8">
         <title>Send a message</title>
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <style>
-            .form {
-                width: 100%;
-                display: inline-block;
-                border: 1px solid rgba(25, 25, 25, 0.32);
-            }
-
-            .message {
-                color: red;
-                /* border: 1px solid; */
-                border-radius: 4px;
-                margin: 4px 0;
-                padding: 4px;
-            }
-
-            input[type=submit] {
-                visibility: collapse;
-            }
-
-            input {
-                border: 0;
-                outline: none;
-                width: calc(100% - 2px);
-            }
-        </style>
         <form class="form" action="/">
             <div class="message"></div>
-            <input class="form-input" name="message-text" placeholder="Введите сообщение" type="text">
+            <label>
+                <input class="form-input" name="message-text" placeholder="Введите сообщение" type="text">
+            </label>
         </form>
         <script>
             const form = document.querySelector('form');
