--- a/simple-chat/src/index.html
+++ b/simple-chat/src/index.html
@@ -9,7 +9,7 @@
         <form class="form" action="/">
             <div class="message"></div>
             <label>
-                <input class="form-input" name="message-text" placeholder="Введите сообщение" type="text">
+                <input class="form-input" name="message-text" placeholder="Сообщение" type="text">
             </label>
         </form>
         <script>
