--- a/simple-chat/src/index.html
+++ b/simple-chat/src/index.html
@@ -12,24 +12,6 @@
                 <input class="form-input" name="message-text" placeholder="Сообщение" type="text">
             </label>
         </form>
-        <script>
-            const form = document.querySelector('form');
-            const input = document.querySelector('.form-input');
-            const message = document.querySelector('.message');
-
-            form.addEventListener('submit', this.handleSubmit.bind(this));
-            form.addEventListener('keypress', this.handleKeyPress.bind(this));
-
-            function handleSubmit (event) {
-                event.preventDefault();
-                message.innerText = input.value;
-            }
-
-            function handleKeyPress (event) {
-                if (event.keyCode === 13) {
-                    form.dispatchEvent(new Event('submit'));
-                }
-            }
-        </script>
+        <script src="index.js"></script>
     </body>
 </html>
