hw2: сохранение и вывод сообщений

--- a/simple-chat/src/index.html
+++ b/simple-chat/src/index.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <form class="form" action="/">
-            <div class="message"></div>
-            <label>
+            <div class="messages"></div>
+            <label class="input-container">
                 <input class="form-input" name="message-text" placeholder="Сообщение" type="text">
             </label>
         </form>
