hw2: имя и дата в сообщении

--- a/simple-chat/src/index.html
+++ b/simple-chat/src/index.html
@@ -8,8 +8,11 @@
     <body>
         <form class="form" action="/">
             <div class="messages"></div>
-            <label class="input-container">
-                <input class="form-input" name="message-text" placeholder="Сообщение" type="text">
+            <label class="name-input-container">
+                <input class="name-input" name="sender-name" placeholder="Имя" type="text">
+            </label>
+            <label class="message-input-container">
+                <input class="message-input" name="message-text" placeholder="Сообщение" type="text">
             </label>
         </form>
         <script src="index.js"></script>
