deploy: 2f3d01bbacbc9ac3a845970f888994816be39482

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Send a message</title>
         <link rel="stylesheet" href="index.css">
-    </head>
+    <link href="style.css" rel="stylesheet"></head>
     <body>
         <form class="form" action="/">
             <div class="messages"></div>
