--- a/simple-chat/src/index.html
+++ b/simple-chat/src/index.html
@@ -4,15 +4,24 @@
         <meta charset="UTF-8">
         <title>Send a message</title>
         <link rel="stylesheet" href="index.css">
+        <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
     </head>
     <body>
+        <div class="header">
+            <span class="material-symbols-outlined">arrow_back</span>
+            <img src="src/pictures/avatar.png" alt="Avatar" class="avatar">
+            <div class="header-text">
+                <span class="name">Дженнифер</span>
+                <span class="status">была 2 часа назад</span>
+            </div>
+            <span class="material-symbols-outlined">search</span>
+            <span class="material-symbols-outlined">more_vert</span>
+        </div>
         <form class="form" action="/">
             <div class="messages"></div>
-            <label class="name-input-container">
-                <input class="name-input" name="sender-name" placeholder="Имя" type="text">
-            </label>
             <label class="message-input-container">
                 <input class="message-input" name="message-text" placeholder="Сообщение" type="text">
+                <span class="material-symbols-outlined">attach_file</span>
             </label>
         </form>
         <script src="index.js"></script>
