--- a/chat-list.html
+++ b/chat-list.html
@@ -4,22 +4,14 @@
         <meta charset="UTF-8">
         <title>Chat list</title>
         <link rel="stylesheet" href="index.css">
-        <link rel="stylesheet" href="styles/chatList/header.css">
-        <link rel="stylesheet" href="styles/chatList/chat.css">
-        <link rel="stylesheet" href="styles/chatList/createChatButton.css">
+        <link rel="stylesheet" href="../components/chat-list/chatListHeader.css">
         <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
-    <link href="chatList.style.css" rel="stylesheet"></head>
+    </head>
     <body>
-        <div class="header">
-            <span class="material-symbols-outlined">menu</span>
-            <div class="header-text">
-                <span class="name">Messenger</span>
-            </div>
-            <span class="material-symbols-outlined">search</span>
-        </div>
+        <div id="app"></div>
         <form class="form" action="/">
             <div class="chat"></div>
         </form>
-        <script src="index.js"></script>
+        <script src="index.js" type="module"></script>
     <script type="text/javascript" src="chatList.bundle.js"></script></body>
 </html>
