deploy: 25de6f7454a080b60b4eaf2c9e1707a38f2021a2

--- a/chat-list.html
+++ b/chat-list.html
@@ -5,13 +5,12 @@
         <title>Chat list</title>
         <link rel="stylesheet" href="index.css">
         <link rel="stylesheet" href="../components/chat-list/chatListHeader.css">
+        <link rel="stylesheet" href="../components/chat-list/chatList.css">
+        <link rel="stylesheet" href="../components/chat-list/chat.css">
         <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
     </head>
     <body>
         <div id="app"></div>
-        <form class="form" action="/">
-            <div class="chat"></div>
-        </form>
         <script src="index.js" type="module"></script>
     <script type="text/javascript" src="chatList.bundle.js"></script></body>
 </html>
