--- a/chat-list.html
+++ b/chat-list.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="../components/chat-list/chatListHeader.css">
         <link rel="stylesheet" href="../components/chat-list/chatList.css">
         <link rel="stylesheet" href="../components/chat-list/chat.css">
+        <link rel="stylesheet" href="../components/chat-list/createChatButton.css">
         <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
     </head>
     <body>
