--- a/simple-chat/src/chat/index.html
+++ b/simple-chat/src/chat/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Send a message</title>
         <link rel="stylesheet" href="index.css">
-        <link rel="stylesheet" href="../components/chat/chatHeader.css">
+        <link rel="stylesheet" href="../components/chat/header.css">
         <link rel="stylesheet" href="../components/chat/chatScreen.css">
         <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
     </head>
