--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-        <meta charset="UTF-8">
-        <title>Chat list</title>
-        <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
-    <link href="chatList.style.css" rel="stylesheet"></head>
-    <body>
-        <div id="app"></div>
-    <script type="text/javascript" src="chatList.bundle.js"></script></body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/2024-2-VK-EDU-Frontend-N-Gavrilov/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/2024-2-VK-EDU-Frontend-N-Gavrilov/logo192.png"/><link rel="manifest" href="/2024-2-VK-EDU-Frontend-N-Gavrilov/manifest.json"/><title>React App</title><script defer="defer" src="/2024-2-VK-EDU-Frontend-N-Gavrilov/static/js/main.850a1c7a.js"></script><link href="/2024-2-VK-EDU-Frontend-N-Gavrilov/static/css/main.6aa77974.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
